# Django-Quotes

./: README.md  pyproject.toml  rdm
quotes/: script_data_migration_authors.py  script_data_migration_quotes.py
quotes/authorsapp/: forms.py  models.py  urls.py  views.py
quotes/authorsapp/migrations/: 0001_initial.py  0002_alter_author_description.py  0003_alter_author_description.py  0004_alter_author_goodreads_url.py  0005_alter_author_born_date_alter_author_born_location_and_more.py
quotes/authorsapp/templates/authorsapp/: author.html  author_detail.html
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  forms.py  models.py  scrapper.py  scrapper_a.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_rename_name_quote_quote.py  0003_alter_quote_quote.py  0004_alter_quote_quote_alter_tag_name.py  0005_alter_quote_quote.py
quotes/quotesapp/static/: style.css
quotes/quotesapp/templates/quotesapp/: find_tag.html  index.html  quote.html
quotes/users/: urls.py  views.py
quotes/users/templates/users/: login.html  password_reset_subject.txt  signup.html
